GNOME Bugzilla – Bug 625968
endianess convertion on 64 bit float is incorrect
Last modified: 2011-09-06 00:02:15 UTC
Created attachment 167065 [details] [review] fix for the problem, formated by git. 64bits float should be converted simply inverting all bytes. The conversion applyed is for what the wikipeadia article calls "middle-endian. see : http://en.wikipedia.org/wiki/Endianness
*** Bug 648644 has been marked as a duplicate of this bug. ***
Review of attachment 167065 [details] [review]: Thanks, pushed to master as 37f60708.