Fix endianess conversion for 64-bit floating point

Sources: http://en.wikipedia.org/wiki/Endianness

https://bugzilla.gnome.org/show_bug.cgi?id=625968